# ChangeLog for sys-kernel/calckernel
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calckernel-3.4.14 (17 Mar 2011)

  17 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calckernel-3.4.14.ebuild, +files/calckernel-3.4.14.patch:
  Bump version.

*calckernel-3.4.10.903-r23 (16 Sep 2010)

  16 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calckernel-3.4.10.903-r23.ebuild, +files/calckernel-3.4.10.903-r23.patch:
  Added hide busybox compilation.

  01 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calckernel-3.4.10.903-r22.ebuild:
  Changed home page.

  10 Dec 2009; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calckernel-3.4.10.903-r16.ebuild, +files/calckernel-3.4.10.903-r16.patch:
  Remove lzma compression for initramfs.

*calckernel-3.4.10.903-r16 (24 Nov 2009)

  24 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +metadata.xml:
  Fix package
