@@ -19,6 +19,6 @@ DIST open-iscsi-2.0-871.tar.gz 330514 RMD160 f996d9145bc3727394f1a4999f430bd5ea5
 DIST unionfs-fuse-0.22.tar.bz2 27355 RMD160 f29cbf41af0ba8f2181ac565a6663871676f6488 SHA1 e95799923ee3938e1fb44c6fd9aa7154d720063e SHA256 fa0c494a8ce63f235601fcc35e3a96527831169d6d5921ee49faccf3b25feb78
 EBUILD calckernel-3.4.10.903-r22.ebuild 4826 RMD160 10c135db68ecd902be5bb296cb7909f69876b174 SHA1 98489b9221d1c5c59f17f2e7d8139402994f1cd3 SHA256 0413b1c5f9c3caebe6bb19d225bd4fd2b9d4e17ebaf927affc54e8f3bae4b6e6
 EBUILD calckernel-3.4.10.903-r23.ebuild 4826 RMD160 10c135db68ecd902be5bb296cb7909f69876b174 SHA1 98489b9221d1c5c59f17f2e7d8139402994f1cd3 SHA256 0413b1c5f9c3caebe6bb19d225bd4fd2b9d4e17ebaf927affc54e8f3bae4b6e6
-EBUILD calckernel-3.4.14.ebuild 5480 RMD160 9bfce8ef8cd74197c974c9a0ace7564f1fd63529 SHA1 178edc90a4166e1e18331b9f3237698db6ae8733 SHA256 584ae2ad116a0609e4303ab1dbb9c96ab2c4dc0f1bb97940d4cfac072a631971
-MISC ChangeLog 938 RMD160 dfbc00f59924d70f7e1b1a6e39fda88dbcd84a60 SHA1 0de6ae1a2ba03693e27998296bd4c01ae325f943 SHA256 37d763bd3a23211c8ac7306f8b265a4e110dd4d95d45cd4785cd6f608a5e2fcc
+EBUILD calckernel-3.4.14.ebuild 5478 RMD160 ba88c027ef64dd905089f7daa7faec58e1021db5 SHA1 2b45873d7ad31d5ef615f272cf91f48a1ccbdd1f SHA256 041e5ab309ce2002d2e8978cba4374be5f02b747bd3d1bdce49b6a9364361400
+MISC ChangeLog 1049 RMD160 131c1d2ea2d8a10d6490c2385d088910a272990c SHA1 c39d4ba01afe4fc71eb10e8925f76d8a12eb2ed3 SHA256 eb4519e0fb6add68dcb3baf22485c3b8741f410500cc6d966b2ceb4862afacce
 MISC metadata.xml 332 RMD160 7baff74f671fb7762513694b3d1694923b851b79 SHA1 72a7b3811a232e0506a65bdeb622f11abae0a04c SHA256 629337dd254d66431dd8752f97f1981de237cf1ca44a0eefc3a7cb8e667d7458
