@@ -55,7 +55,7 @@ else
 		${COMMON_URI}"
 	# Please don't touch individual KEYWORDS.  Since this is maintained/tested by
 	# Release Engineering, it's easier for us to deal with all arches at once.
-	KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sparc ~x86"
+	KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sparc x86"
 fi
 
 DESCRIPTION="Calculate automatic kernel building scripts"
