@@ -32,11 +32,11 @@ DIST patch-2.6.36.4.bz2 186814 RMD160 ed06acb39f2e272d388bb04810d0d9626c70fa55 S
 DIST patch-2.6.37.4.bz2 139328 RMD160 1e5ee5b5ea9cf52dc839ae49d83687024acbab9a SHA1 baacae8e8bbfbb80cfa9aa2a0aff7ac8e315b56a SHA256 6c0352055d5502fb177eb573a881629dcf5dc979342293fde08d782a17b5d68c
 EBUILD calculate-sources-2.6.32.27.ebuild 741 RMD160 be7ac9ba69c0fdaac93557404c547621e1c93937 SHA1 cfa2b0ae9e5b1d6e134b28c055e4532bd7948a9d SHA256 64eb8b8bcc41963a457ea343aba414ae7e388260912b5e170db5e9298c23176c
 EBUILD calculate-sources-2.6.32.28.ebuild 754 RMD160 84f99a822f8d4078ffbd2373d40fd905a134794b SHA1 7808e3c4e2a54f9955b120dcbcf85f2fd8ab396b SHA256 959bb169c8427191cbf9a4e5c74e871bf699ae0eef17068fbc85b24d2bd55599
-EBUILD calculate-sources-2.6.32.33.ebuild 749 RMD160 427a3669340a36d19516e4a5eedae61d5f741781 SHA1 42179d3e424a3a515ea43c18b9712fa3e837af7a SHA256 907aa69a4220bf860afe597717a80c694a60e7ae7ea014b7686f0cdf47c88f9b
+EBUILD calculate-sources-2.6.32.33.ebuild 747 RMD160 77bb94e00e846a787758c292ad449687ef756d08 SHA1 b907c1681d7b749780b519e9c4d17032fab3da84 SHA256 2ca22d6ad7b2e2a20d42c77462043bc359e36dc73d144231b758ac408885e988
 EBUILD calculate-sources-2.6.35.9.ebuild 1324 RMD160 42d73ad5fcc292c90df73cbb0b4933ab7fbf4c74 SHA1 7a23fb44ad946e45f804bc9e7539905e36545124 SHA256 94fd25687d0f182ae4fa6a59c91605dbb326bffa171195bf92f837e96d3e6d64
 EBUILD calculate-sources-2.6.36.2.ebuild 1330 RMD160 c56242f09611ce06d193b9aae1acd42369b119ae SHA1 a02dde56690d2c9d99d7b8d21eb60cc7a15ce6c3 SHA256 ea756887d381b6fff444d5efe7f97c69d4917240ff93dd12f2d804a0fe9353ad
 EBUILD calculate-sources-2.6.36.3.ebuild 1330 RMD160 ea0f8e3d725f9acdbc0ada775565a9214aae2066 SHA1 f6efacc1b71261c4302a539eb6e9f4a033afa583 SHA256 1ccec7bb325127cd3703e99763b467c96b660bc297ac38a888c8138ac4b3608e
-EBUILD calculate-sources-2.6.36.4.ebuild 1325 RMD160 ca84789928429048f21834dc50b31cd921bfef72 SHA1 fae947a05ee0e179167a19eec2597475ad4aaff7 SHA256 261e22b1f6000039b006e00eca83a524d4614a6cfb329b35cfa09180cbb086c6
-EBUILD calculate-sources-2.6.37.4.ebuild 1363 RMD160 561f6dba1255bb37fa01773783a317dd7fe5962d SHA1 d81892ab54e7e29816b1803b08f8e55d9481e70e SHA256 78dd68dceacc46140b9b16f11c052cfc757e7105cf7569f11f24a7f18848286b
-MISC ChangeLog 5223 RMD160 71183706081652e0a89bb3d8bfa397609b737671 SHA1 e251ecf44ad4915812eea36006620f1e56ce30ae SHA256 ec12a43ca8a6bca11785c238bdeff1c882176fd4316ace12b55b12ae25658a7a
+EBUILD calculate-sources-2.6.36.4.ebuild 1323 RMD160 ecb6cf249532f9a433998d28090e24c7fac07230 SHA1 720402d6d706442ad16caa683a759732920c6763 SHA256 ec8750d3edb912949380570f7170233757a9e854b87b1e6126988984a1a073f4
+EBUILD calculate-sources-2.6.37.4.ebuild 1361 RMD160 e38a207a34b65fb836b2c04ca396235d52a43985 SHA1 fc6cdb63c260c00e9ddb2376e8dc40f8f2e9c2e0 SHA256 4fc12a27e9fc5050c979693f00c92158a17f75541b9f0c73c32faca47987e5d5
+MISC ChangeLog 5411 RMD160 8a09141a01002b85c529838477b8b1ad7c594633 SHA1 c98b7902a2aa4fb7377f36a72c25e19a545099d6 SHA256 a28bc5ba5c190b2330e0f326346f3ed42bc8f14521caf4a46bcb73424ecb364d
 MISC metadata.xml 523 RMD160 855108e020b3f1fe32f843accc94a57f15affa0e SHA1 7fbeb862ff719c9ef63925b7f18104ff6eac27dd SHA256 997dc6d02e44eef86cc9653d7588b9f65e9033f02e28b3a8d98f48df82561f3c
