@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calculate-sources-2.6.32.33.ebuild, calculate-sources-2.6.36.4.ebuild,
+  calculate-sources-2.6.37.4.ebuild:
+  Unmask kernel.
+
 *calculate-sources-2.6.36.4 (17 Mar 2011)
 *calculate-sources-2.6.32.33 (17 Mar 2011)
 
