@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calckernel-3.4.14.ebuild:
+  Unmask by keywords.
+
 *calckernel-3.4.14 (17 Mar 2011)
 
   17 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
